--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convolution Neural Networks"
+    "# Convolutional Neural Networks"
    ]
   },
   {
@@ -29,6 +29,8 @@
     "- Picture neural style transfer\n",
     "\n",
     "## Objectives\n",
+    "\n",
+    "You will be able to:\n",
     "\n",
     "* Describe what a CNN is\n",
     "* Describe the basic architectural features of a CNN\n",
@@ -235,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
