--- a/index.ipynb
+++ b/index.ipynb
@@ -4,13 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convolutional Neural Networks"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Convolutional Neural Networks\n",
+    "\n",
     "## Introduction   \n",
     "\n",
     "Convolutional Neural Networks (CNNs), build upon the fully connected neural networks you've seen to date. Since detailed images can have an incredibly high dimension based on the number of pixels, CNNs provide an alternative formulation for analyzing groups of pixels. Without the convolutional operation, fitting neural networks to medium to large images would be infeasible for all but the most powerful computers. For example, given a color image with 500 x 500 pixels, you would have 500 x 500 x 3 = 750,000 input features, $(x_1,...,x_{750,000})$. \n",
@@ -35,53 +30,28 @@
     "\n",
     "* Describe what a CNN is\n",
     "* Describe the basic architectural features of a CNN\n",
-    "* Identify common use cases for CNNs"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* Identify common use cases for CNNs\n",
+    "\n",
     "## Building CNNs in Keras\n",
     "\n",
     "Building a CNN in Keras is very similar to the previous neural networks that you've built to date. To start, you will initialize a sequential model as before and go on adding layers. However, rather then simply adding additional dense layers or dropouts between them, we will now start to investigate other potential layer architectures including convolutional layers.\n",
     "\n",
-    "<img src=\"images/architecture-cnn.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "<img src=\"images/architecture-cnn.png\">\n",
+    "\n",
     "## The Convolution Operation \n",
     "\n",
-    "The idea behind the convolutional operation is to detect complex building blocks, or features, that can aid in the larger task such as image recognition. For example, we'll detect vertical or horizontal edges present in the image. Let's look at what horizontal edge detection would look like!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "![title](images/conv.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The idea behind the convolutional operation is to detect complex building blocks, or features, that can aid in the larger task such as image recognition. For example, we'll detect vertical or horizontal edges present in the image. Let's look at what horizontal edge detection would look like!\n",
+    "\n",
+    "![title](images/conv.png)\n",
+    "\n",
     "This is a simplified 5 x 5 pixel image (greyscale!). You use a so-called \"filter\" (denoted on the right) to perform a convolution operation. This particular filter operation will detect horizontal edges. The matrix in the left should have number in it (from 1-255, or let's assume we rescaled it to number 1-10). The output is a 3 x 3 matrix. (*This example is for computational clarity, no clear edges*)\n",
     "\n",
     "\n",
     "In Keras, function for the convolution step is `Conv2D`.\n",
     "\n",
     "The convolutional operation applies this filter (typically 3x3 or 5x5) to each possible 3x3 or 5x5 region of the original image. The graphic below demonstrates this process. Later, \n",
-    "<img src=\"images/convolution-layer-a.png\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "<img src=\"images/convolution-layer-a.png\">\n",
+    "\n",
     "## Padding\n",
     "\n",
     "There are some issues with using filters on images including: \n",
@@ -107,31 +77,16 @@
     "- \"Valid\" - no padding\n",
     "- \"Same\" - padding such that output is same as the input size\n",
     "\n",
-    "By adding padding to our 5x5 image, (now a 6x6 image by adding a border of pixels) we can add padding so that each pixel of our original 5x5 image can be the center of a 3x3 convolution window filter."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "By adding padding to our 5x5 image, (now a 6x6 image by adding a border of pixels) we can add padding so that each pixel of our original 5x5 image can be the center of a 3x3 convolution window filter.\n",
+    "\n",
     "## Strided convolutions\n",
     "\n",
     "Another method to change the output of your convolutions is to change the stride. The stride is how the convolution filter is moved over the original image. In our above example, we moved the filter one pixel to the right starting from the upper left hand corner, and then began to do this again after moving the filter one pixel down. Alternatively, by changing the stride, we could move our filter by 2 pixels each time, resulting in a smaller number of possible locations for the filter.  \n",
     "\n",
-    "Strided convolutions are rarely used in practice but a good feature to be aware of for some models."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Convolutions on RGB images"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Strided convolutions are rarely used in practice but a good feature to be aware of for some models.\n",
+    "\n",
+    "## Convolutions on RGB images\n",
+    "\n",
     "Instead of 5 x 5 grayscale, imagine a 7 x 7 RGB image, which boils down to having a 7 x 7 x 3 tensor. (The image itself is compromised by a 7 by 7 matrix of pixels, each with 3 numerical values for the RGB values.) From there, you will need to use a filter that has the third dimension equal to 3 as well, let's say, 3 x 3 x 3 (a 3D \"cube\"). \n",
     "\n",
     "This allows you to detect, horizontal edges in the blue channel.\n",
@@ -165,46 +120,27 @@
     "$n_w^{[l]}= \\Bigr\\lfloor\\dfrac{n_w^{[l-1]}+2p^{[l]}-f^{[l]}}{s^{[l]}}+1\\Bigr\\rfloor$\n",
     "\n",
     "\n",
-    "Activations: $a^{[l]}$ is of dimension $ n_h^{[l]} * n_w^{[l]} * n_c^{[l]} $\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Activations: $a^{[l]}$ is of dimension $ n_h^{[l]} * n_w^{[l]} * n_c^{[l]} $\n",
+    "\n",
+    "\n",
     "## Pooling layer\n",
     "\n",
-    "The last element in a CNN architecture (before fully connected layers as we have previously discussed in other neural networks) is the pooling layer. This layer is meant to substantially downsample the previous convolutional layers. The idea behind this is that the previous convolutional layers will find patterns such as edges or other basic shapes present in the pictures. From there, pooling layers such as Max pooling (the most common) will take a summary of the convolutions from a larger section. In practice Max pooling (taking the max of all convolutions from a larger area of the original image) works better then average pooling as we are typically looking to detect whether a feature is present in that region. Downsampling is essential in order to produce viable execution times in the model training."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The last element in a CNN architecture (before fully connected layers as we have previously discussed in other neural networks) is the pooling layer. This layer is meant to substantially downsample the previous convolutional layers. The idea behind this is that the previous convolutional layers will find patterns such as edges or other basic shapes present in the pictures. From there, pooling layers such as Max pooling (the most common) will take a summary of the convolutions from a larger section. In practice Max pooling (taking the max of all convolutions from a larger area of the original image) works better then average pooling as we are typically looking to detect whether a feature is present in that region. Downsampling is essential in order to produce viable execution times in the model training.\n",
+    "\n",
     "Max pooling has some important hyperparameters:\n",
     "- f (filter size)\n",
     "- S (stride)\n",
     "\n",
     "Common hyperparameters include: f=2, s=2 and f=3, s=2, this shrinks the size of the representations.\n",
-    "If a feature is detected anywhere in the quadrants, a high number will appear. so max pooling preserves this feature."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "If a feature is detected anywhere in the quadrants, a high number will appear. so max pooling preserves this feature.\n",
+    "\n",
     "## Fully Connected Layers in Your CNN.\n",
     "\n",
-    "Once you have added a number of convolutional layers and pooling layers, you then. will add fully connected (dense) layers as we did before in previous neural network models. This now allows the network to learn a final decision function based on these transformed informative inputs generating from the convolutional and pooling layers."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Once you have added a number of convolutional layers and pooling layers, you then. will add fully connected (dense) layers as we did before in previous neural network models. This now allows the network to learn a final decision function based on these transformed informative inputs generating from the convolutional and pooling layers.\n",
+    "\n",
     "## Summary   \n",
     "\n",
-    "In this lesson, you learned about the basic concepts behind CNNs including their use cases and general archictecture. In the upcoming lab, you'll begin to look at how you can build these models in Python using Keras."
+    "In this lesson, you learned about the basic concepts behind CNNs including their use cases and general architecture. In the upcoming lab, you'll begin to look at how you can build these models in Python using Keras."
    ]
   }
  ],
@@ -224,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
