--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "Building a CNN in Keras is very similar to the previous neural networks that you've built to date. To start, you will initialize a sequential model as before and go on adding layers. However, rather then simply adding additional dense layers or dropouts between them, we will now start to investigate other potential layer architectures including convolutional layers.\n",
     "\n",
-    "<img src=\"images/architecture-cnn.png\">\n",
+    "<img src=\"images/Image_158CNN.png\">\n",
     "\n",
     "## The Convolution Operation \n",
     "\n",
@@ -142,6 +142,13 @@
     "\n",
     "In this lesson, you learned about the basic concepts behind CNNs including their use cases and general architecture. In the upcoming lab, you'll begin to look at how you can build these models in Python using Keras."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -160,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
