added gif citation

--- a/index.ipynb
+++ b/index.ipynb
@@ -50,7 +50,10 @@
     "In Keras, function for the convolution step is `Conv2D`.\n",
     "\n",
     "The convolutional operation applies this filter (typically 3x3 or 5x5) to each possible 3x3 or 5x5 region of the original image. The graphic below demonstrates this process. Later, \n",
+    "\n",
     "<img src=\"images/convolution-layer-a.png\">\n",
+    "\n",
+    "[gif courtesy of Stanford University](https://stanford.edu/~shervine/teaching/cs-230/cheatsheet-convolutional-neural-networks)\n",
     "\n",
     "## Padding\n",
     "\n",
