--- a/index.ipynb
+++ b/index.ipynb
@@ -11,6 +11,22 @@
     "Convolutional Neural Networks (CNNs), build upon the fully connected neural networks you've seen to date. Since detailed images can have incredibly high dimensions based on the number of pixels, CNNs provide an alternative formulation for analyzing groups of pixels. Without the convolutional operation, fitting neural networks to medium to large images would be infeasible for all but the most powerful computers. For example, given a color image with 500 x 500 pixels, you would have 500 x 500 x 3 = 750,000 input features, $(x_1,...,x_{750,000})$. \n",
     "From there, even having 2000 hidden units (3% of the input), in the first hidden layer, would result in roughly 1.5 billion parameters!\n",
     "\n",
+    "## Objectives\n",
+    "\n",
+    "You will be able to:\n",
+    "\n",
+    "- Define what a convolution is, as it relates to CNNs \n",
+    "- Explain how convolutions work using RGB images \n",
+    "- Describe what a pooling layer is in a neural network \n",
+    "- Explain how padding works with convolution layers of a neural network "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CNNs\n",
+    "\n",
     "CNNs have certain features that identify patterns in images because of \"convolution operation\" including:\n",
     "\n",
     "- Dense layers learn global patterns in their input feature space\n",
@@ -23,40 +39,46 @@
     "\n",
     "- Image classification\n",
     "- Object detection in images\n",
-    "- Picture neural style transfer\n",
-    "\n",
-    "## Objectives\n",
-    "\n",
-    "You will be able to:\n",
-    "\n",
-    "- Define what a convolution is, as it relates to CNNs \n",
-    "- Explain how convolutions work using RGB images \n",
-    "- Describe what a pooling layer is in a neural network \n",
-    "- Explain how padding works with convolution layers of a neural network \n",
-    "\n",
+    "- Picture neural style transfer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Building CNNs in Keras\n",
     "\n",
     "Building a CNN in Keras is very similar to the previous neural networks that you've built to date. To start, you will initialize a sequential model as before and go on adding layers. However, rather then simply adding additional dense layers or dropouts between them, we will now start to investigate other potential layer architectures including convolutional layers.\n",
     "\n",
-    "<img src=\"images/Image_158CNN.png\">\n",
-    "\n",
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-convolutional-neural-networks/master/images/Image_158CNN.png\" alt=\"input image, convolutions, pooling, fully connected\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## The Convolution Operation \n",
     "\n",
     "The idea behind the convolutional operation is to detect complex building blocks, or features, that can aid in the larger task such as image recognition. For example, we'll detect vertical or horizontal edges present in the image. Let's look at what horizontal edge detection would look like: \n",
     "\n",
-    "![title](images/conv.png)\n",
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-convolutional-neural-networks/master/images/conv.png\" alt=\"one 5 by 5 grid, one 3 by 3 grid containing 1 1 1 0 0 0 -1 -1 -1\" />\n",
     "\n",
-    "This is a simplified 5 x 5 pixel image (greyscale!). You use a so-called \"filter\" (denoted on the right) to perform a convolution operation. This particular filter operation will detect horizontal edges. The matrix in the left should have number in it (from 1-255, or let's assume we rescaled it to number 1-10). The output is a 3 x 3 matrix. (*This example is for computational clarity, no clear edges*)\n",
+    "This is a simplified 5 x 5 pixel image (grayscale!). You use a so-called \"filter\" (denoted on the right) to perform a convolution operation. This particular filter operation will detect horizontal edges. The matrix in the left should have number in it (from 1-255, or let's assume we rescaled it to number 1-10). The output is a 3 x 3 matrix. (*This example is for computational clarity, no clear edges*)\n",
     "\n",
     "\n",
     "In Keras, function for the convolution step is `Conv2D`.\n",
     "\n",
     "The convolutional operation applies this filter (typically 3x3 or 5x5) to each possible 3x3 or 5x5 region of the original image. The graphic below demonstrates this process.  \n",
     "\n",
-    "<img src=\"images/convolution-layer-a.png\">\n",
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-convolutional-neural-networks/master/images/convolution-layer-a.png\" alt=\"animation of filter operation across an image to create a smaller matrix output\">\n",
     "\n",
-    "[gif courtesy of Stanford University](https://stanford.edu/~shervine/teaching/cs-230/cheatsheet-convolutional-neural-networks)\n",
-    "\n",
+    "[gif courtesy of Stanford University](https://stanford.edu/~shervine/teaching/cs-230/cheatsheet-convolutional-neural-networks)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Padding\n",
     "\n",
     "There are some issues with using filters on images including: \n",
@@ -70,10 +92,10 @@
     "\n",
     "For example, if you apply 3x3 filters to a 5x5 image, the original 5x5 image contains 25 pixels, but tiling the 3x3 filter only has 9 possible locations. Here's the 4 of the 9 possible locations for the 3x3 filter on a 5x5 image:  \n",
     "\n",
-    "<img src=\"images/5by5_3by3_1.jpeg\" width=200>\n",
-    "<img src=\"images/5by5_3by3_2.jpeg\" width=200>\n",
-    "<img src=\"images/5by5_3by3_3.jpeg\" width=200>\n",
-    "<img src=\"images/5by5_3by3_4.jpeg\" width=200>\n",
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-convolutional-neural-networks/master/images/5by5_3by3_1.jpeg\" width=200>\n",
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-convolutional-neural-networks/master/images/5by5_3by3_2.jpeg\" width=200>\n",
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-convolutional-neural-networks/master/images/5by5_3by3_3.jpeg\" width=200>\n",
+    "<img src=\"https://raw.githubusercontent.com/learn-co-curriculum/dsc-convolutional-neural-networks/master/images/5by5_3by3_4.jpeg\" width=200>\n",
     "\n",
     "Fortunately, padding solves both of these problems! Just one layer of pixels around the edges preserves the image size when having a 3 x 3 filter. We can also use bigger filters, but generally the dimensions are odd!\n",
     "\n",
@@ -82,14 +104,24 @@
     "- \"Valid\" - no padding\n",
     "- \"Same\" - padding such that output is same as the input size\n",
     "\n",
-    "By adding padding to our 5x5 image, (now a 6x6 image by adding a border of pixels) we can add padding so that each pixel of our original 5x5 image can be the center of a 3x3 convolution window filter.\n",
-    "\n",
+    "By adding padding to our 5x5 image, (now a 6x6 image by adding a border of pixels) we can add padding so that each pixel of our original 5x5 image can be the center of a 3x3 convolution window filter."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Strided convolutions\n",
     "\n",
     "Another method to change the output of your convolutions is to change the stride. The stride is how the convolution filter is moved over the original image. In our above example, we moved the filter one pixel to the right starting from the upper left hand corner, and then began to do this again after moving the filter one pixel down. Alternatively, by changing the stride, we could move our filter by 2 pixels each time, resulting in a smaller number of possible locations for the filter.  \n",
     "\n",
-    "Strided convolutions are rarely used in practice but a good feature to be aware of for some models.\n",
-    "\n",
+    "Strided convolutions are rarely used in practice but a good feature to be aware of for some models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Convolutions on RGB images\n",
     "\n",
     "Instead of 5 x 5 grayscale, imagine a 7 x 7 RGB image, which boils down to having a 7 x 7 x 3 tensor. (The image itself is compromised by a 7 by 7 matrix of pixels, each with 3 numerical values for the RGB values.) From there, you will need to use a filter that has the third dimension equal to 3 as well, let's say, 3 x 3 x 3 (a 3D \"cube\"). \n",
@@ -124,9 +156,13 @@
     "$n_w^{[l]}= \\Bigr\\lfloor\\dfrac{n_w^{[l-1]}+2p^{[l]}-f^{[l]}}{s^{[l]}}+1\\Bigr\\rfloor$\n",
     "\n",
     "\n",
-    "Activations: $a^{[l]}$ is of dimension $ n_h^{[l]} * n_w^{[l]} * n_c^{[l]} $\n",
-    "\n",
-    "\n",
+    "Activations: $a^{[l]}$ is of dimension $ n_h^{[l]} * n_w^{[l]} * n_c^{[l]} $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Pooling layer\n",
     "\n",
     "The last element in a CNN architecture (before fully connected layers as we have previously discussed in other neural networks) is the pooling layer. This layer is meant to substantially downsample the previous convolutional layers. The idea behind this is that the previous convolutional layers will find patterns such as edges or other basic shapes present in the pictures. From there, pooling layers such as Max pooling (the most common) will take a summary of the convolutions from a larger section. In practice, Max pooling (taking the max of all convolutions from a larger area of the original image) works better than average pooling as we are typically looking to detect whether a feature is present in that region. Downsampling is essential in order to produce viable execution times in the model training.\n",
@@ -136,6 +172,7 @@
     "- $S$ (stride)\n",
     "\n",
     "Common hyperparameters include: `f=2`, `s=2` and `f=3`, `s=2`, this shrinks the size of the representations.\n",
+    "\n",
     "If a feature is detected anywhere in the quadrants, a high number will appear, so max pooling preserves this feature.\n",
     "\n",
     "## Fully Connected Layers in CNN\n",
@@ -150,9 +187,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python (learn-env)",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -164,7 +201,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
